# agent-django-allauth

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: django.yml
agent_site/: wsgi.py
main/: tests.py
main/static/main/: style.css
main/templates/main/: home.html
